@@ -1,5 +1,10 @@
 2008-08-06  Dan Williams  <dcbw@redhat.com>
 
+	* src/connection-editor/page-ip4.c
+		- 'shared' is pointless for VPN connections
+
+2008-08-06  Dan Williams  <dcbw@redhat.com>
+
 	* src/connection-editor/ce-page-ip4.glade
 		- Add a checkbox for 'ignore-auto-routes'
 
